crates/ohno_macros/src/derive_error/display/snapshots/ohno_macros__derive_error__display__tests__a_declared_core_is_offered_as_an_available_field.snap
---
source: crates/ohno_macros/src/derive_error/display/mod.rs
expression: "lowered(parse_quote!\n{\n    #[display(\"bad path: {pth}\")] struct T\n    { path: String, inner: ohno::OhnoCore }\n})"
---
fn message() {
    let _ = "bad path: {}";
}
::core::compile_error! {
    "unknown field `pth` in `#[display(...)]`, available fields: `path`, `inner`"
}
