crates/ohno_macros/src/derive_error/display/snapshots/ohno_macros__derive_error__display__tests__a_named_placeholder_becomes_a_field_access.snap
---
source: crates/ohno_macros/src/derive_error/display/mod.rs
expression: "lowered(parse_quote!\n{\n    #[display(\"failed for {path}\")] struct T\n    { path: String, inner: ohno::OhnoCore }\n})"
---
fn message() {
    let _ = ::std::format!("failed for {}", & self.path);
}
