crates/ohno_macros/src/derive_error/display/snapshots/ohno_macros__derive_error__display__tests__too_few_arguments_are_reported.snap
---
source: crates/ohno_macros/src/derive_error/display/mod.rs
expression: "lowered(parse_quote!\n{\n    #[display(\"{} {}\", path)] struct T { path: String, inner: ohno::OhnoCore }\n})"
---
fn message() {
    let _ = ::std::format!("{} {}", & (self.path));
}
::core::compile_error! {
    "`#[display(...)]` template has more `{}` placeholders than arguments"
}
